--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ llama-index = "^0.10.30"
 faiss-cpu = "^1.8.0"
 backoff = "^2.2.1"
 openai = "^1.12.0"
+jinja2 = "^3.1.3"
 
 [build-system]
 requires = ["poetry-core"]
