--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ faiss-cpu = "^1.8.0"
 backoff = "^2.2.1"
 openai = "^1.12.0"
 jinja2 = "^3.1.3"
+pytest = "^8.1.1"
 
 [build-system]
 requires = ["poetry-core"]
