--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ backoff = "^2.2.1"
 openai = "^1.12.0"
 jinja2 = "^3.1.3"
 pytest = "^8.1.1"
+groq = "^0.5.0"
 
 [build-system]
 requires = ["poetry-core"]
