--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ jinja2 = "^3.1.3"
 pytest = "^8.1.1"
 groq = "^0.5.0"
 
+[tool.poetry.group.dev.dependencies]
+langchain = "^0.1.16"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
