improved react_agent with the usage of internal knowlege and the finish designed to be a joiner for all subqueries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ groq = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 langchain = "^0.1.16"
+langchainhub = "^0.1.15"
 
 [build-system]
 requires = ["poetry-core"]
