desgined base component similar to pytorch module, Model subclass, and renamed and refactored the end to end rag code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ langchain = "^0.1.16"
 langchainhub = "^0.1.15"
 llama-index = "^0.10.30"
 pre-commit = "^3.7.0"
+torch = "^2.3.0"
+dspy-ai = "^2.4.9"
+litellm = "^1.35.34"
 
 
 [build-system]
