--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ pre-commit = "^3.7.0"
 torch = "^2.3.0"
 dspy-ai = "^2.4.9"
 litellm = "^1.35.34"
+haystack-ai = "^2.0.1"
+transformers = "^4.40.1"
+pgvector-haystack = "^0.1.0"
+ollama = "^0.1.9"
 
 
 [build-system]
