--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ test_llamaindex.py
 outputs.txt
 core/__pycache__
 lightrag/__pycache__
-extend/*/__pycache__
-extend/__pycache__
+components/*/__pycache__
+components/__pycache__
 tests/__pycache__
 test_li.py
 test_li*.py
