--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,10 @@ litellm = "^1.35.34"
 haystack-ai = "^2.0.1"
 transformers = "^4.40.1"
 pgvector-haystack = "^0.1.0"
-ollama = "^0.1.9"
 torchvision = "^0.18.0"
+llama-index-llms-huggingface = "^0.1.5"
+accelerate = "^0.30.0"
+llama-index-llms-ollama = "^0.1.3"
 
 
 [build-system]
