--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ jinja2 = "^3.1.3"
 pytest = "^8.1.1"
 groq = "^0.5.0"          # should only be installed if groq client is used
 datasets = "^2.19.1"
+sphinx = "^7.3.7"
+sphinx-rtd-theme = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 langchain = "^0.1.16"
