--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,13 +26,13 @@ openai = "^1.12.0"
 jinja2 = "^3.1.3"
 pytest = "^8.1.1"
 groq = "^0.5.0"          # should only be installed if groq client is used
+datasets = "^2.19.1"
 
 [tool.poetry.group.dev.dependencies]
 langchain = "^0.1.16"
 langchainhub = "^0.1.15"
 llama-index = "^0.10.30"
 pre-commit = "^3.7.0"
-dspy-ai = "^2.4.9"
 litellm = "^1.35.34"
 haystack-ai = "^2.0.1"
 torchvision = "^0.18.0"
