--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,13 +38,14 @@ mypy = "^1"
 [tool.poetry.group.doc.dependencies]
 sphinx = "^7.3.7"
 sphinx-rtd-theme = "^2.0.0"
+groq = "^0.5.0"          # should only be installed if groq client is used
+datasets = "^2.19.1"
 
 [tool.poetry.group.dev.dependencies]
 langchain = "^0.1.16"
 langchainhub = "^0.1.15"
 llama-index = "^0.10.30"
 pre-commit = "^3.7.0"
-dspy-ai = "^2.4.9"
 litellm = "^1.35.34"
 haystack-ai = "^2.0.1"
 torchvision = "^0.18.0"
