--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,4 @@ docs/build/
 docs/_build/
 docs/source/_static
 docs/source/_templates
-docs/source/documents/tests*.rst
+docs/source/apis/tests*.rst
