delete commented code, tested simple_rag with without chunk, added a input_field_map_fun for retriever to be able to for any content used by the retriever using any fields or any content from the Document

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = [
 packages = [
     { include = "core", from = "." },
     { include = "components", from = "." },
-    { include = "use_cases", from = "." },
+    # { include = "use_cases", from = "." },
 ]
 
 [tool.poetry.dependencies]
