--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ jinja2 = "^3.1.3"
 openai = "^1.12.0"
 groq = "^0.5.0"      # should only be installed if groq client is used
 faiss-cpu = "^1.8.0"
+torchviz = "^0.0.2"
 
 
 [tool.poetry.group.test.dependencies]
