--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ torch = "^2.3.0"
 langsmith = "^0.1.56"
 langchain-openai = "^0.1.6"
 pyvis = "^0.3.2"
+llama-index-llms-ollama = "^0.1.3"
 
 
 [tool.ruff]
