--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ langsmith = "^0.1.56"
 langchain-openai = "^0.1.6"
 pyvis = "^0.3.2"
 llama-index-llms-ollama = "^0.1.3"
+llama-index-llms-replicate = "^0.1.3"
 
 
 [tool.ruff]
