--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ langchain-openai = "^0.1.6"
 pyvis = "^0.3.2"
 llama-index-llms-ollama = "^0.1.3"
 llama-index-llms-replicate = "^0.1.3"
+anthropic = "^0.26.0"
 
 
 [tool.ruff]
