--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ openai = "^1.12.0"
 jinja2 = "^3.1.3"
 pytest = "^8.1.1"
 groq = "^0.5.0"          # should only be installed if groq client is used
+structlog = "^24.1.0"
 
 [tool.poetry.group.dev.dependencies]
 langchain = "^0.1.16"
