--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ pyvis = "^0.3.2"
 llama-index-llms-ollama = "^0.1.3"
 llama-index-llms-replicate = "^0.1.3"
 anthropic = "^0.26.0"
+google-generativeai = "^0.5.4"
 
 
 [tool.ruff]
