auto generate api, and will need optimization later for display

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -22,11 +22,8 @@ help:
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 apidoc:
-	@echo "Running sphinx-apidoc for core"
-	@sphinx-apidoc -o $(APIDOCOUTDIR)/core ../core --separate --force --module-first
-	@echo "Running sphinx-apidoc for components"
-	@sphinx-apidoc -o $(APIDOCOUTDIR)/components ../components --separate --force --module-first
-
+	@sphinx-apidoc -o $(APIDOCOUTDIR)/core ../core --separate --force
+	@sphinx-apidoc -o $(APIDOCOUTDIR)/components ../components --separate --force
 
 
 html: apidoc
