--- a/.gitignore
+++ b/.gitignore
@@ -21,14 +21,11 @@ docs/source/
 llama3/
 docs/build/
 docs/_build/
-docs/source/_static
 docs/source/_templates
-docs/source/apis/tests*.rst
 tests/log_test/*.log
-docs/source/documents/tests*.rst
 docs/source/documents/
+docts/source/apis/*
 lib/
-docs/source/apis/tests*.rst
 li_test/
 .mypy_cache/
 .pytest_cache/
