--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11"
+python = ">=3.11, <4.0"
 python-dotenv = "^1.0.1"
 backoff = "^2.2.1"
 jinja2 = "^3.1.3"
@@ -42,7 +42,6 @@ sphinx-rtd-theme = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 langchain = "^0.1.16"
-langchainhub = "^0.1.15"
 llama-index = "^0.10.30"
 pre-commit = "^3.7.0"
 litellm = "^1.35.34"
@@ -53,7 +52,6 @@ langsmith = "^0.1.56"
 langchain-openai = "^0.1.6"
 pyvis = "^0.3.2"
 llama-index-llms-ollama = "^0.1.3"
-llama-index-llms-replicate = "^0.1.3"
 anthropic = "^0.26.0"
 google-generativeai = "^0.5.4"
 
