--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ pyvis = "^0.3.2"
 llama-index-llms-ollama = "^0.1.3"
 anthropic = "^0.26.0"
 google-generativeai = "^0.5.4"
+transformers = "^4.41.0"
 
 
 [tool.ruff]
