--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ llama-index-llms-ollama = "^0.1.3"
 anthropic = "^0.26.0"
 google-generativeai = "^0.5.4"
 transformers = "^4.41.0"
+torchmetrics = "^1.4.0.post0"
 
 
 [tool.ruff]
