--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,11 @@ backoff = "^2.2.1"
 jinja2 = "^3.1.3"
 # TODO: decide if we need people to install faiss, or openai, or groq separately
 openai = "^1.12.0"
-groq = "^0.5.0"       # should only be installed if groq client is used
+groq = "^0.5.0"                # should only be installed if groq client is used
 faiss-cpu = "^1.8.0"
 torchviz = "^0.0.2"
 matplotlib = "^3.8.4"
-ipykernel = "^6.29.4"
+pydata-sphinx-theme = "0.15.2"
 
 
 [tool.poetry.group.test.dependencies]
@@ -62,6 +62,7 @@ torchmetrics = "^1.4.0.post0"
 lightning = "^2.2.4"
 dspy-ai = "^2.4.9"
 jupyter = "^1.0.0"
+ipykernel = "^6.29.4"
 
 
 [tool.ruff]
