--- a/docs/Makefile
+++ b/docs/Makefile
@@ -26,6 +26,7 @@ apidoc:
 	@sphinx-apidoc -o $(APIDOCOUTDIR)/components ../components --separate --force
 	@echo "Inserting reference labels into RST files."
 	@python $(SOURCEDIR)/insert_labels.py
+	@python $(SOURCEDIR)/remove_string.py
 
 
 html: apidoc
