add colorama package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ groq = "^0.5.0"       # should only be installed if groq client is used
 faiss-cpu = "^1.8.0"
 torchviz = "^0.0.2"
 matplotlib = "^3.8.4"
+colorama = "^0.4.6"
 
 
 [tool.poetry.group.test.dependencies]
