--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,6 @@ groq = "^0.5.0"                # should only be installed if groq client is used
 faiss-cpu = "^1.8.0"
 torchviz = "^0.0.2"
 matplotlib = "^3.8.4"
-pydata-sphinx-theme = "0.15.2"
 colorama = "^0.4.6"
 
 
@@ -42,6 +41,8 @@ mypy = "^1"
 datasets = ">=2.14.6, <=2.19.1"
 sphinx = "^7.3.7"
 sphinx-rtd-theme = "^2.0.0"
+pydata-sphinx-theme = "0.15.2"
+sphinx-design = "^0.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
