Revert "setup the __init__.py for easier logger import"
This reverts commit 2281dda290bcc8d2e87a2fe7bb57df6f4df403b0.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@ li_test/
 .mypy_cache/
 .pytest_cache/
 local_cache/
+custom.log
+docs/
+lightrag.log
+log/
+phoenix.csv
+test.log
+test0528.log
+tests/*
+traces.txt
