fix the error when multiple log with the same name are required, add test cases, adjust the doc strings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,12 @@ groq = "^0.5.0"       # should only be installed if groq client is used
 faiss-cpu = "^1.8.0"
 torchviz = "^0.0.2"
 matplotlib = "^3.8.4"
-ipykernel = "^6.29.4"
+colorama = "^0.4.6"
 
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
+pytest-mock = "^3.14.0"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1"
@@ -41,6 +42,8 @@ mypy = "^1"
 datasets = ">=2.14.6, <=2.19.1"
 sphinx = "^7.3.7"
 sphinx-rtd-theme = "^2.0.0"
+pydata-sphinx-theme = "0.15.2"
+sphinx-design = "^0.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -62,6 +65,8 @@ torchmetrics = "^1.4.0.post0"
 lightning = "^2.2.4"
 dspy-ai = "^2.4.9"
 jupyter = "^1.0.0"
+ipykernel = "^6.29.4"
+colorama = "^0.4.6"
 
 
 [tool.ruff]
