--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ packages = [
     { include = "components", from = "." },
     { include = "prompts", from = "." },
     { include = "eval", from = "." },
+    { include = "utils", from = "." },
+    { include = "tracing", from = "." },
 ]
 version = "0.1.0"
 description = "The 'PyTorch' library for LLM applications. RAG=Retriever-Agent-Generator."
