--- a/docs/Makefile
+++ b/docs/Makefile
@@ -23,7 +23,7 @@ help:
 
 apidoc:
 	@sphinx-apidoc -o $(APIDOCOUTDIR)/core ../core --separate --force
-	@sphinx-apidoc -o $(APIDOCOUTDIR)/components ../components --separate --force
+	@sphinx-apidoc -o $(APIDOCOUTDIR)/components ../components --separate --force --templatedir=$(SOURCEDIR)/_templates
 	@sphinx-apidoc -o $(APIDOCOUTDIR)/eval ../eval --separate --force
 	@sphinx-apidoc -o $(APIDOCOUTDIR)/prompts ../prompts --separate --force
 	@sphinx-apidoc -o $(APIDOCOUTDIR)/utils ../utils --separate --force
@@ -31,6 +31,8 @@ apidoc:
 	@python $(SOURCEDIR)/insert_labels.py
 	@echo "Removing unnecessary strings for better formatting"
 	@python $(SOURCEDIR)/remove_string.py
+	@echo "Removing duplicated autosummary files"
+	@python $(SOURCEDIR)/remove_duplicated_files.py
 
 
 
