--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -8,3 +8,5 @@ source/apis/prompts/prompts*
 source/apis/prompts/modules*
 source/apis/utils/utils*
 source/apis/utils/modules*
+source/apis/tracing/tracing*
+source/apis/tracing/modules*
