--- a/docs/Makefile
+++ b/docs/Makefile
@@ -22,17 +22,18 @@ help:
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 apidoc:
-	@sphinx-apidoc -o $(APIDOCOUTDIR)/core ../core --separate --force --templatedir=$(SOURCEDIR)/_templates
+	@sphinx-apidoc -o $(APIDOCOUTDIR)/core ../core --separate --force
 	@sphinx-apidoc -o $(APIDOCOUTDIR)/components ../components --separate --force --templatedir=$(SOURCEDIR)/_templates
-	@sphinx-apidoc -o $(APIDOCOUTDIR)/eval ../eval --separate --force --templatedir=$(SOURCEDIR)/_templates
-	@sphinx-apidoc -o $(APIDOCOUTDIR)/prompts ../prompts --separate --force --templatedir=$(SOURCEDIR)/_templates
-	@sphinx-apidoc -o $(APIDOCOUTDIR)/utils ../utils --separate --force --templatedir=$(SOURCEDIR)/_templates
+	@sphinx-apidoc -o $(APIDOCOUTDIR)/eval ../eval --separate --force
+	@sphinx-apidoc -o $(APIDOCOUTDIR)/prompts ../prompts --separate --force
+	@sphinx-apidoc -o $(APIDOCOUTDIR)/utils ../utils --separate --force
 	@echo "Inserting reference labels into RST files."
 	@python $(SOURCEDIR)/insert_labels.py
 	@echo "Removing unnecessary strings for better formatting"
 	@python $(SOURCEDIR)/remove_string.py
-	@echo "Removing duplicated autosummary files"
-	@python $(SOURCEDIR)/remove_duplicated_files.py
+	@echo "Removing duplicated files"
+	@sleep 3  # Gives a slight delay to ensure filesystem is ready
+	@python $(SOURCEDIR)/remove_files.py
 
 
 
