--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -26,16 +26,19 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
+
 python-dotenv = "^1.0.1"
 backoff = "^2.2.1"
 jinja2 = "^3.1.3"
 jsonlines = "^4.0.0"
-# TODO: decide if we need people to install faiss, or openai, or groq separately
+# TODO: decide if we need people to install faiss, or openai, or groq separatelypython = ">=3.11, <4.0"
+
 openai = "^1.12.0"
 groq = "^0.5.0"      # should only be installed if groq client is used
 faiss-cpu = "^1.8.0"
 # matplotlib = "^3.8.4"
 # colorama = "^0.4.6"
+tiktoken = "^0.7.0"
 
 
 [tool.poetry.group.test.dependencies]
@@ -45,12 +48,16 @@ pytest-mock = "^3.14.0"
 [tool.poetry.group.typing.dependencies]
 mypy = "^1"
 
-[tool.poetry.group.doc.dependencies]
-datasets = ">=2.14.6, <=2.19.1"
-sphinx = "^7.3.7"
-sphinx-rtd-theme = "^2.0.0"
-pydata-sphinx-theme = "0.15.2"
-sphinx-design = "^0.6.0"
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.7.0"
+
+
+# [tool.poetry.group.doc.dependencies]
+# datasets = ">=2.14.6, <=2.19.1"
+# sphinx = "^7.3.7"
+# sphinx-rtd-theme = "^2.0.0"
+# pydata-sphinx-theme = "0.15.2"
+# sphinx-design = "^0.6.0"
 
 
 [tool.ruff]
