--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,6 +122,7 @@ dspy-ai = "^2.4.9"
 jupyter = "^1.0.0"
 ipykernel = "^6.29.4"
 colorama = "^0.4.6"
+dataclasses-jsonschema = "^2.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
