--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,7 @@ dataclasses-jsonschema = "^2.16.0"
 [tool.poetry.group.doc.dependencies]
 pydata-sphinx-theme = "^0.15.3"
 sphinx-design = "^0.6.0"
+sphinx-copybutton = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
