--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ packages = [
 python = ">=3.11, <4.0"
 lightrag = { path = "./lightrag", develop = true }
 sphinx = "^7.3.7"
+groq = "0.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -124,6 +125,7 @@ jupyter = "^1.0.0"
 ipykernel = "^6.29.4"
 colorama = "^0.4.6"
 dataclasses-jsonschema = "^2.16.0"
+groq = "^0.5.0"
 
 [tool.poetry.group.doc.dependencies]
 pydata-sphinx-theme = "^0.15.3"
