--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ packages = [
 python = ">=3.11, <4.0"
 lightrag = { path = "./lightrag", develop = true }
 sphinx = "^7.3.7"
+groq = "0.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
