--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -31,6 +31,7 @@ backoff = "^2.2.1"
 jinja2 = "^3.1.3"
 jsonlines = "^4.0.0"
 tiktoken = "^0.7.0"
+numpy = "^1.26.4"
 
 # TODO: decide if we need people to install faiss, or openai, or groq separatelypython = ">=3.11, <4.0"
 
