--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ pydata-sphinx-theme = "^0.15.3"
 sphinx-design = "^0.6.0"
 sphinx-copybutton = "^0.5.2"
 sphinx = "^7.3.7"
+nbsphinx = "^0.9.4"
+nbconvert = "^7.16.4"
+pandoc = "^2.3"
 
 
 [build-system]
