--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -11,3 +11,5 @@ source/apis/utils/utils*
 source/apis/utils/modules*
 source/apis/tracing/tracing*
 source/apis/tracing/modules*
+source/apis/optim/optim*
+source/apis/optim/modules*
