--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ ipykernel = "^6.29.4"
 colorama = "^0.4.6"
 dataclasses-jsonschema = "^2.16.0"
 groq = "^0.5.0"
+llama-index-retrievers-bm25 = "^0.1.3"
+rank-bm25 = "^0.2.2"
 
 
 [tool.poetry.group.doc.dependencies]
