--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -46,6 +46,7 @@ more-itertools = "^10.3.0"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
 pytest-mock = "^3.14.0"
+transformers = "^4.41.2"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1"
