--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -47,6 +47,7 @@ more-itertools = "^10.3.0"
 pytest = "^8.1.1"
 pytest-mock = "^3.14.0"
 transformers = "^4.41.2"
+torch = "^2.3.1"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1"
