added lazy import and conditional package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ python = ">=3.11, <4.0"
 lightrag = { path = "./lightrag", develop = true }
 torch = "^2.3.1"
 flagembedding = "^1.2.10"
-cohere = "^5.5.7"
+# cohere = "^5.5.7"
 
 
 [tool.poetry.group.dev.dependencies]
