--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ lightrag = { path = "./lightrag", develop = true }
 torch = "^2.3.1"
 flagembedding = "^1.2.10"
 # cohere = "^5.5.7"
+openai = "^1.34.0"
 
 
 [tool.poetry.group.dev.dependencies]
