--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ groq = "^0.5.0"
 # llama-index-retrievers-bm25 = "^0.1.3"
 rank-bm25 = "^0.2.2"
 llama-index = "^0.10.44"
+llama-index-vector-stores-postgres = "^0.1.11"
+pgvector = "^0.2.5"
 
 
 [tool.poetry.group.doc.dependencies]
