complete the reranker and llm as retriever in retriever notes and improve the code for better repr and clean up

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ rank-bm25 = "^0.2.2"
 llama-index = "^0.10.44"
 llama-index-vector-stores-postgres = "^0.1.11"
 pgvector = "^0.2.5"
+cohere = "^5.5.8"
 
 
 [tool.poetry.group.doc.dependencies]
