use dataclass decorate instead of metaclass as the vs code is not highlighting the initiation arguments for thses structures, improve local db to work with both any type of data, add data note

--- a/developer_notes/default_config.json
+++ b/developer_notes/default_config.json
@@ -28,7 +28,7 @@
   "to_embeddings": {
       "component_name": "ToEmbeddings",
       "component_config": {
-          "vectorizer": {
+          "embedder": {
               "component_name": "Embedder",
               "component_config": {
                   "model_client": {
