--- a/default_config.json
+++ b/default_config.json
@@ -10,7 +10,7 @@
   "to_embeddings": {
       "component_name": "ToEmbeddings",
       "component_config": {
-          "vectorizer": {
+          "embedder": {
               "component_name": "Embedder",
               "component_config": {
                   "model_client": {
