--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ cohere = "^5.5.8"
 langchain = "^0.2.5"
 langchain-community = "^0.2.5"
 langchain-openai = "^0.1.8"
+pydot = "^2.0.0"
 
 
 [tool.poetry.group.doc.dependencies]
