--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ sphinx = "^7.3.7"
 nbsphinx = "^0.9.4"
 nbconvert = "^7.16.4"
 pandoc = "^2.3"
+readthedocs-sphinx-search = "^0.3.2"
 
 
 [build-system]
