--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ torch = "^2.3.1"
 flagembedding = "^1.2.10"
 # cohere = "^5.5.7"
 openai = "^1.34.0"
+pgvector = "^0.2.5"
 
 
 [tool.poetry.group.dev.dependencies]
