--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,9 @@
-pydata-sphinx-theme==0.15.2
-Sphinx==7.3.7
-sphinx_design==0.6.0
+pydata-sphinx-theme==0.15.3
+sphinx-design==0.6.0
 sphinx-copybutton==0.5.2
+sphinx==7.3.7
+nbsphinx==0.9.4
+nbconvert==7.16.4
+pandoc==2.3
+readthedocs-sphinx-search==0.3.2
+numpy  # Include any other dependencies required by your main project if they are used in the docs.
