--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,13 +4,7 @@ on:
   push:
     branches:
       - xiaoyi_doc
-  pull_request:
-    branches:
-      - xiaoyi_doc
   workflow_dispatch:
-
-permissions:
-  contents: write
 
 jobs:
   docs:
@@ -19,11 +13,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'  # Set the Python version to match your local environment
+          python-version: '3.11'
+      - name: List docs directory
+        run: ls -l ./docs
+      - name: Display requirements.txt
+        run: cat ./docs/requirements.txt
       - name: Install dependencies
         run: |
           pip install -r ./docs/requirements.txt
-          pip freeze  # List installed packages to verify installation
+          pip freeze
       - name: Sphinx build
         run: |
           sphinx-build -b html docs/source/ docs/build/
