--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,7 +4,6 @@ sphinx-copybutton==0.5.2
 sphinx==7.3.7
 nbsphinx==0.9.4
 nbconvert==7.16.4
-pandoc==2.3
-readthedocs-sphinx-search==0.3.2
-numpy  # Include any other dependencies required by your main project if they are used in the docs.
 PyYAML
+readthedocs-sphinx-search==0.3.2
+numpy
