--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -37,8 +37,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: xiaoyi_doc  # Deploy to the xiaoyi_doc branch
+          publish_branch: gh-pages  # Deploy to the gh-pages branch
           publish_dir: docs/build/  # Publish from the docs/build/ directory
-          destination_dir: docs  # Ensure the files are placed in the correct directory
-          # user_name: github-actions[bot]
-          # user_email: github-actions[bot]@users.noreply.github.com
+          user_name: github-actions[bot]
+          user_email: github-actions[bot]@users.noreply.github.com
