--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -40,6 +40,8 @@ torch = "^2.3.1"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1"
+types-pyyaml = "^6.0.12.20240311" # for mypy
+
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
