--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ torch = "^2.3.1"
 flagembedding = "^1.2.10"
 # cohere = "^5.5.7"
 openai = "^1.34.0"
+networkx = "^3.3"
+pyvis = "^0.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -50,6 +52,8 @@ langchain = "^0.2.5"
 langchain-community = "^0.2.5"
 langchain-openai = "^0.1.8"
 pydot = "^2.0.0"
+matplotlib = "^3.9.0"
+pyvis = "^0.3.2"
 
 
 [tool.poetry.group.doc.dependencies]
